--- a/package.json
+++ b/package.json
@@ -11,10 +11,32 @@
         "media": "media"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node launcher.js",
+        "launcher": "node launcher.js",
+        "enhanced": "node enhanced-bot.js --qr",
+        "enhanced-qr": "node enhanced-bot.js --qr",
+        "enhanced-pair": "node enhanced-bot.js --pairing-code",
+        "start-bot": "node start-bot.js",
+        "start-qr": "node main-qr.js",
+        "start-force": "node main-force-pairing.js",
+        "clear-session": "node clear-session.js",
+        "test": "node test-connection.js",
+        "test-all": "node connection-test.js",
+        "demo": "node demo.js",
+        "working": "node working-bot.js",
+        "complete": "node complete-bot.js",
+        "direct": "node direct-run.js",
+        "qr-fixed": "node qr-fixed.js",
+        "fresh-qr": "node fresh-qr.js",
+        "unified": "node unified-bot.js",
+        "quick": "node quick-start.js",
+        "dev": "node --watch enhanced-bot.js --qr"
     },
     "author": "DGXeon",
     "license": "MIT",
+    "engines": {
+        "node": ">=16.0.0"
+    },
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
         "@distube/ytdl-core": "^4.16.12",
@@ -35,6 +57,7 @@
         "jsdom": "^22.1.0",
         "libphonenumber-js": "^1.12.11",
         "moment-timezone": "^0.5.43",
+        "ms": "^2.1.3",
         "node-cache": "^5.1.2",
         "node-fetch": "^2.6.11",
         "node-id3": "^0.2.3",
@@ -51,6 +74,10 @@
         "youtube-yts": "^2.0.0",
         "youtubedl-core": "^4.11.7",
         "yt-dlp-wrap": "^2.3.12",
+        "yt-search": "^2.13.1",
         "ytdl-core": "^4.11.5"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
     }
 }
